Camera Core Refactoring

--- a/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
+++ b/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
@@ -16,7 +16,9 @@
 "noPhotosAccessTitle" = "No Photos Access";
 "noMicrophoneAccessTitle" = "No Microphone Access";
 "noCameraAccessTitle" = "No Camera Access";
+"wrongAccessTitle" = "Ooops!";
 
 "noPhotosAccessDescription" = "To save your photo, our app needs permission to access Photos.";
 "noMicrophoneDescription" = "To shoot video with audio, our app needs permission to access the iPhone Microphone.";
 "noCameraAccessDescription" = "To take photos and shoot videos with filters, our app needs permission to access the iPhone Camera.";
+"wrongAccessDescription" = "Something went wrong :(";
