--- a/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
+++ b/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
@@ -7,6 +7,9 @@
 "okButtonTitle" = "OK";
 "settingsButtonTitle" = "Settings";
 "goSettingsButtonTitle" = "Go to settings";
+"shareButtonTitle" = "Share";
+"deleteButtonTitle" = "Delete";
+"cancelButtonTitle" = "Cancel";
 
 // MARK: - Alerts
 
@@ -17,8 +20,10 @@
 "noMicrophoneAccessTitle" = "No Microphone Access";
 "noCameraAccessTitle" = "No Camera Access";
 "wrongAccessTitle" = "Ooops!";
+"deleteAlertTitle" = "Do you really want to delete?";
 
 "noPhotosAccessDescription" = "To save your photo, our app needs permission to access Photos.";
 "noMicrophoneDescription" = "To shoot video with audio, our app needs permission to access the iPhone Microphone.";
 "noCameraAccessDescription" = "To take photos and shoot videos with filters, our app needs permission to access the iPhone Camera.";
 "wrongAccessDescription" = "Something went wrong :(";
+"deleteAlertDescription" = "This action cannot be reversed";
