Add UploadContent Screen

--- a/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
+++ b/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
@@ -10,6 +10,7 @@
 "shareButtonTitle" = "Share";
 "deleteButtonTitle" = "Delete";
 "cancelButtonTitle" = "Cancel";
+"continueButtonTitle" = "Continue";
 
 // MARK: - Alerts
 
