--- a/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
+++ b/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
@@ -35,3 +35,7 @@
 "tapOnTransformTitle" = "Tap to transform";
 "historyTitle" = "History";
 "settingsTitle" = "Settings";
+"cameraTitle" = "Camera";
+"photosTitle" = "Photos";
+"takePhotoVideoTitle" = "Take photo or video";
+"importFromPhotoTitle" = "Import from Photos";
