--- a/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
+++ b/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "cancelButtonTitle" = "Cancel";
 "continueButtonTitle" = "Continue";
 "proButtonTitle" = "PRO";
+"viewAllButtonTitle" = "View all";
 
 // MARK: - Alerts
 
