Setup HomeView and History to HomeView

--- a/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
+++ b/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
@@ -40,3 +40,5 @@
 "photosTitle" = "Photos";
 "takePhotoVideoTitle" = "Take photo or video";
 "importFromPhotoTitle" = "Import from Photos";
+"noPhotosTitle" = "No Photos Yet";
+"historyWillAppearTitle" = "Your history will appear here";
