Improvements Setup Edit Mode for Photos; Improved processes for interacting with content

--- a/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
+++ b/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
@@ -13,6 +13,7 @@
 "continueButtonTitle" = "Continue";
 "proButtonTitle" = "PRO";
 "viewAllButtonTitle" = "View all";
+"editButtonTitle" = "Edit";
 
 // MARK: - Alerts
 
