Setup Filters For History

--- a/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
+++ b/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "proButtonTitle" = "PRO";
 "viewAllButtonTitle" = "View all";
 "editButtonTitle" = "Edit";
+"goCameraButtonTitle" = "Go to Camera";
 
 // MARK: - Alerts
 
@@ -43,3 +44,4 @@
 "importFromPhotoTitle" = "Import from Photos";
 "noPhotosTitle" = "No Photos Yet";
 "historyWillAppearTitle" = "Your history will appear here";
+"allTitle" = "All";
