--- a/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
+++ b/TestVisionThermal/TestVisionThermal/Application/Resources/en.lproj/Localizable.strings
@@ -15,6 +15,8 @@
 "viewAllButtonTitle" = "View all";
 "editButtonTitle" = "Edit";
 "goCameraButtonTitle" = "Go to Camera";
+"proBannerButtonTitle" = "Unlock Pro";
+"setupButtonTitle" = "Setup";
 
 // MARK: - Alerts
 
@@ -45,3 +47,16 @@
 "noPhotosTitle" = "No Photos Yet";
 "historyWillAppearTitle" = "Your history will appear here";
 "allTitle" = "All";
+"proBannerTitle" = "Unlimited Access";
+"proBannerMessage" = "Unlimited access & Multiple filters";
+"mailUnavailableTitle" = "Mail Unavailable";
+"mailUnavailableMessage" = "This iPhone does not have default Mail account setup. You can Setup Mail account or send an email manually to %@";
+
+// MARK: - Settings
+
+"contactSettings" = "Contact Us";
+"shareSettings" = "Share App";
+"restoreSettings" = "Restore";
+"rateSettings" = "Rate Us";
+"privacySettings" = "Privacy Policy";
+"termsSettings" = "Terms of Use";
